--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "\u001b[A\u001b[Bmain.ts",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"build:sass\" \"lite-server\" ",
-    "build:sass": "node-sass sass_folder/ -o css_folder",
+    "clean": "rm -rf dist && mkdir dist",
+    "start": "npm run clean && npm run copy:html && npm run build:sass tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "copy:html": "copyfiles -u 1 src/**/*.html dist",
+    "build:sass": "node-sass src/ -o dist/",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lint": "tslint ./app/**/*.ts -t verbose",
@@ -19,8 +21,10 @@
     "bootstrap-css": "^4.0.0-alpha.5",
     "bootstrap-sass": "^3.3.7",
     "concurrently": "^3.4.0",
+    "copyfiles": "^1.2.0",
     "lite-server": "^2.3.0",
     "node-sass": "^4.5.3",
+    "postcss": "^6.0.1",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.5",
     "tslint": "^5.0.0",
