--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,14 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true
-  }
+    "suppressImplicitAnyIndexErrors": true,
+    "outDir": "dist"
+  },
+  "exclude": [
+        "node_modules",
+        "*/*.js",
+        "**/*.js",
+        "*/*.map",
+        "**/*.map"
+    ]
 }
