--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/router": "^4.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ng2-cookies": "^1.0.12",
     "redux": "^3.6.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.3.0",
